页面升级优化

--- a/index.html
+++ b/index.html
@@ -1,16 +1,80 @@
 <!doctype html>
-<html lang="en">
+<html lang="zh-CN">
+  <head>
+    <meta charset="UTF-8" />
+    <link rel="icon" type="image/svg+xml" href="/favicon.ico" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-<head>
-  <meta charset="UTF-8" />
-  <link rel="icon" type="image/svg+xml" href="@/assets/images/logo.jpg" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>岱威创新管业</title>
-</head>
+    <!-- 基础 SEO 元数据 -->
+    <title>山东岱威创新管业 - 专业管道系统解决方案</title>
+    <meta
+      name="description"
+      content="山东岱威创新管业专注于提供高品质的管道系统解决方案，包括管件、阀门、智能管网系统等产品。服务于化工、建筑、市政等多个行业，致力于成为管道行业的领导者。"
+    />
+    <meta
+      name="keywords"
+      content="管道系统,管件,阀门,智能管网,化工管道,建筑管道,市政管道,岱威管业"
+    />
+    <meta name="author" content="山东岱威创新管业" />
+    <meta name="robots" content="index, follow" />
 
-<body>
-  <div id="app"></div>
-  <script type="module" src="/src/main.ts"></script>
-</body>
+    <!-- Open Graph / Facebook -->
+    <meta property="og:type" content="website" />
+    <meta property="og:title" content="山东岱威创新管业 - 专业管道系统解决方案" />
+    <meta
+      property="og:description"
+      content="山东岱威创新管业专注于提供高品质的管道系统解决方案，包括管件、阀门、智能管网系统等产品。"
+    />
+    <meta property="og:image" content="/images/og-image.jpg" />
+    <meta property="og:site_name" content="山东岱威创新管业" />
+    <meta property="og:locale" content="zh_CN" />
 
+    <!-- Twitter -->
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta name="twitter:title" content="山东岱威创新管业 - 专业管道系统解决方案" />
+    <meta
+      name="twitter:description"
+      content="山东岱威创新管业专注于提供高品质的管道系统解决方案，包括管件、阀门、智能管网系统等产品。"
+    />
+    <meta name="twitter:image" content="/images/og-image.jpg" />
+
+    <!-- 其他重要标签 -->
+    <meta name="theme-color" content="#003366" />
+    <meta name="msapplication-TileColor" content="#003366" />
+    <link rel="canonical" href="https://www.daiwei-pipes.com/" />
+
+    <!-- 预连接到外部资源 -->
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+
+    <!-- 结构化数据 -->
+    <script type="application/ld+json">
+      {
+        "@context": "https://schema.org",
+        "@type": "Organization",
+        "name": "山东岱威创新管业",
+        "url": "https://www.daiwei-pipes.com",
+        "logo": "https://www.daiwei-pipes.com/images/logo.png",
+        "description": "专业的管道系统解决方案提供商",
+        "address": {
+          "@type": "PostalAddress",
+          "addressCountry": "CN",
+          "addressRegion": "山东省",
+          "addressLocality": "济南市",
+          "addressArea": "长清区",
+          "streetAddress": "双龙路1006号"
+        },
+        "contactPoint": {
+          "@type": "ContactPoint",
+          "telephone": "+86-xxx-xxxx-xxxx",
+          "contactType": "customer service"
+        }
+      }
+    </script>
+  </head>
+
+  <body>
+    <div id="app"></div>
+    <script type="module" src="/src/main.ts"></script>
+  </body>
 </html>
